@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	8.44 (gritter) 3/14/07";
+	"@(#)/usr/ucb/otfdump.sl	8.45 (gritter) 3/15/07";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  8.44 (gritter) 3/14/07";
-const char creator[] = "Heirloom Documentation Tools - dpost 8.44 (gritter) 3/14/07";
+static const char sccsid[] USED = "@(#)dpost.sl  8.45 (gritter) 3/15/07";
+const char creator[] = "Heirloom Documentation Tools - dpost 8.45 (gritter) 3/15/07";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	8.44 (gritter) 3/14/07";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	8.45 (gritter) 3/15/07";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	8.44 (gritter) 3/14/07";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	8.45 (gritter) 3/15/07";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "8.44";
+const char revision[] = "8.45";
 /* SLIST */
 /*
 ext.h: * Sccsid @(#)ext.h	1.110 (gritter) 3/5/07
@@ -37,7 +37,7 @@ nroff.d/n10.c: * Sccsid @(#)n10.c	1.33 (gritter) 12/25/06
 nroff.d/n6.c: * Sccsid @(#)n6.c	1.49 (gritter) 11/13/06
 nroff.d/pt.h: *	Sccsid @(#)pt.h	1.42 (gritter) 12/25/06
 nroff.d/tw.h: * Sccsid @(#)tw.h	1.6 (gritter) 4/25/06
-troff.d/afm.c: * Sccsid @(#)afm.c	1.62 (gritter) 10/30/06
+troff.d/afm.c: * Sccsid @(#)afm.c	1.63 (gritter) 3/15/07
 troff.d/afm.h: * Sccsid @(#)afm.h	1.35 (gritter) 10/5/06
 troff.d/dev.h: * Sccsid @(#)dev.h	1.15 (gritter) 9/24/06
 troff.d/draw.c: * Sccsid @(#)draw.c	1.3 (gritter) 8/8/05
@@ -59,7 +59,7 @@ troff.d/dpost.d/asciitype.c:	Sccsid @(#)asciitype.c	1.4 (gritter) 4/17/03
 troff.d/dpost.d/asciitype.h:	Sccsid @(#)asciitype.h	1.6 (gritter) 9/9/05	
 troff.d/dpost.d/color.c: * Sccsid @(#)color.c	1.5 (gritter) 11/29/05
 troff.d/dpost.d/comments.h: * Sccsid @(#)comments.h	1.5 (gritter) 8/23/05
-troff.d/dpost.d/dpost.c: * Sccsid @(#)dpost.c	1.171 (gritter) 01/06/07
+troff.d/dpost.d/dpost.c: * Sccsid @(#)dpost.c	1.172 (gritter) 3/15/07
 troff.d/dpost.d/dpost.h: * Sccsid @(#)dpost.h	1.11 (gritter) 9/22/06
 troff.d/dpost.d/draw.c: * Sccsid @(#)draw.c	1.5 (gritter) 11/28/05
 troff.d/dpost.d/ext.h: * Sccsid @(#)ext.h	1.5 (gritter) 1/6/06
